@@ -66,7 +66,6 @@ using namespace DOM;
 #include "khtmlview.h"
 #include <kparts/partmanager.h>
 #include "ecma/kjs_proxy.h"
-#include "ecma/xmlhttprequest.h"
 #include "khtml_settings.h"
 
 #include <sys/types.h>
@@ -112,7 +111,6 @@ using khtml::ApplyStyleCommand;
 using khtml::CHARACTER;
 using khtml::ChildFrame;
 using khtml::Decoder;
-using khtml::DocLoader;
 using khtml::EAffinity;
 using khtml::EditAction;
 using khtml::EditCommandPtr;
@@ -632,11 +630,8 @@ bool KHTMLPart::closeURL()
 
   d->m_workingURL = KURL();
 
-  if (DocumentImpl *doc = d->m_doc) {
-    if (DocLoader *docLoader = doc->docLoader())
-      khtml::Cache::loader()->cancelRequests(docLoader);
-    KJS::XMLHttpRequest::cancelRequests(doc);
-  }
+  if ( d->m_doc && d->m_doc->docLoader() )
+    khtml::Cache::loader()->cancelRequests( d->m_doc->docLoader() );
 
   // tell all subframes to stop as well
   ConstFrameIt it = d->m_frames.begin();
